@@ -4,105 +4,97 @@ import com.example.todo.dto.TaskRequest;
 import com.example.todo.dto.TaskResponse;
 import com.example.todo.exception.TaskNotFoundException;
 import com.example.todo.model.Task;
+import com.example.todo.repository.TaskRepository;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 @Service
 public class TaskService {
-    private final List<Task> tasks = new ArrayList<>();
-    private final AtomicLong idCounter = new AtomicLong(1);
 
-    public TaskService() {
-        tasks.add(new Task(idCounter.getAndIncrement(), "Купить молоко",
-                "Обязательно 3.2% жирности", Task.TaskStatus.TODO));
-        tasks.add(new Task(idCounter.getAndIncrement(), "Запустить API",
-                "Настроить Spring Boot приложение", Task.TaskStatus.IN_PROGRESS));
-        tasks.add(new Task(idCounter.getAndIncrement(), "Прочитать документацию",
-                "Изучить Spring REST", Task.TaskStatus.DONE));
+    private final TaskRepository taskRepository;
+
+    public TaskService(TaskRepository taskRepository) {
+        this.taskRepository = taskRepository;
     }
 
+    @Cacheable(value = "tasks")
     public List<TaskResponse> getAllTasks() {
-        return tasks.stream()
+        return taskRepository.findAll()
+                .stream()
                 .map(TaskResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Cacheable(value = "tasks", key = "#status")
     public List<TaskResponse> getTasksByStatus(Task.TaskStatus status) {
-        return tasks.stream()
-                .filter(task -> task.getStatus() == status)
+        return taskRepository.findByStatus(status)
+                .stream()
                 .map(TaskResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Cacheable(value = "taskById", key = "#id")
     public TaskResponse getTaskById(Long id) {
-        Task task = tasks.stream()
-                .filter(t -> t.getId().equals(id))
-                .findFirst()
+        Task task = taskRepository.findById(id)
                 .orElseThrow(() -> new TaskNotFoundException(id));
-
         return TaskResponse.fromEntity(task);
     }
 
+    @CacheEvict(value = {"tasks", "taskById"}, allEntries = true)
     public TaskResponse createTask(TaskRequest request) {
-        Task newTask = new Task(
-                idCounter.getAndIncrement(),
+        Task task = new Task(
                 request.getTitle(),
                 request.getDescription(),
                 request.getStatus()
         );
-        tasks.add(newTask);
-
-        return TaskResponse.fromEntity(newTask);
+        Task saved = taskRepository.save(task);
+        return TaskResponse.fromEntity(saved);
     }
 
+    @CacheEvict(value = {"tasks", "taskById"}, allEntries = true)
     public TaskResponse updateTask(Long id, TaskRequest request) {
-        Task existingTask = tasks.stream()
-                .filter(t -> t.getId().equals(id))
-                .findFirst()
+        Task existing = taskRepository.findById(id)
                 .orElseThrow(() -> new TaskNotFoundException(id));
 
-        existingTask.setTitle(request.getTitle());
-        existingTask.setDescription(request.getDescription());
-        existingTask.setStatus(request.getStatus());
+        existing.setTitle(request.getTitle());
+        existing.setDescription(request.getDescription());
+        existing.setStatus(request.getStatus());
 
-        return TaskResponse.fromEntity(existingTask);
+        Task updated = taskRepository.save(existing);
+        return TaskResponse.fromEntity(updated);
     }
 
+    @CacheEvict(value = {"tasks", "taskById"}, allEntries = true)
     public TaskResponse patchTask(Long id, TaskRequest request) {
-        Task existingTask = tasks.stream()
-                .filter(t -> t.getId().equals(id))
-                .findFirst()
+        Task existing = taskRepository.findById(id)
                 .orElseThrow(() -> new TaskNotFoundException(id));
 
-        if (request.getTitle() != null) {
-            existingTask.setTitle(request.getTitle());
+        if (request.getTitle() != null && !request.getTitle().isBlank()) {
+            existing.setTitle(request.getTitle());
         }
-
         if (request.getDescription() != null) {
-            existingTask.setDescription(request.getDescription());
+            existing.setDescription(request.getDescription());
         }
-
         if (request.getStatus() != null) {
-            existingTask.setStatus(request.getStatus());
+            existing.setStatus(request.getStatus());
         }
 
-        return TaskResponse.fromEntity(existingTask);
+        Task updated = taskRepository.save(existing);
+        return TaskResponse.fromEntity(updated);
     }
 
+    @CacheEvict(value = {"tasks", "taskById"}, allEntries = true)
     public void deleteTask(Long id) {
-        Task taskToDelete = tasks.stream()
-                .filter(t -> t.getId().equals(id))
-                .findFirst()
-                .orElseThrow(() -> new TaskNotFoundException(id));
-
-        tasks.remove(taskToDelete);
+        if (!taskRepository.existsById(id)) {
+            throw new TaskNotFoundException(id);
+        }
+        taskRepository.deleteById(id);
     }
 
     public long getTaskCount() {
-        return tasks.size();
+        return taskRepository.count();
     }
 }
